all TC passed and working on mobile nav bar issues

--- a/style.css
+++ b/style.css
@@ -2,8 +2,20 @@ body {
   font-family: "Open Sans", Arial, sans-serif;
   line-height: 1.5;
 }
+
+span {
+  color: darkslategray;
+  font-size: 50px;
+}
+
 #navbar {
   background-color: #eee;
+}
+/* To want to push the page content to the right when you open the side navigation */
+#page-Content {
+  /* Same as the width of the vertical menu bar */
+  margin-left: 200px;
+  padding: 10px;
 }
 .vertical-menu {
   /* Full-height */
@@ -19,19 +31,15 @@ body {
   top: 0; /* Stay at the top */
   left: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
 }
-#page-Content {
-  /* Same as the width of the vertical menu bar */
-  margin-left: 200px;
-}
+
 ul {
   /* To remove default bullet points in list */
   list-style-type: none;
   /* To remove default spacing from margin left in list*/
   padding-inline-start: 0px;
 }
-
+/* side vertical menu links */
 .vertical-menu a {
   color: black;
   display: block;
@@ -40,6 +48,7 @@ ul {
   padding: 10px;
   text-align: center;
 }
+/* When you mouse over the navigation links, change their color */
 .vertical-menu a:hover {
   background-color: #ccc;
 }
@@ -47,6 +56,7 @@ ul {
 .vertical-menu a.highlight-cls {
   background-color: darkgray;
 }
+
 #main-header {
   padding-top: 5px;
   text-align: center;
@@ -63,4 +73,23 @@ ul {
   /* grid-auto-flow: column;
 grid-template-rows: auto auto auto auto;
 grid-template-columns: auto auto ; */
+}
+/* media query for laptop */
+
+@media only screen and (min-width: 1030px) and (max-width: 1366px) {
+  span {
+    display: none;
+  }
+}
+
+/* media query for mobiles */
+
+@media only screen and (min-device-width: 360px) and (max-device-width: 640px) {
+  /* Position and style the close button (top right corner) */
+  .vertical-menu .closeBtn {
+    position: absolute; /* element is positioned absolutely to its first positioned parent */
+    top: 0;
+    right: 25px;
+    margin-left: 50px;
+  }
 }
